feat : docs  from users/generate_token
